--- a/apache-tomcat-8.0.47/webapps/proyecto/init.css
+++ b/apache-tomcat-8.0.47/webapps/proyecto/init.css
@@ -1,6 +1,6 @@
 body{
 
-	background-image: url("mosaico1.jpg");
+	background-image: url("prueba.jpg");
 	background-repeat:no-repeat;
 	background-attachment: fixed;
 	background-size: 100% 100%;
@@ -10,6 +10,7 @@ body{
 
 label{
 	font-size: 25px;
+	color :#2b3737
 }
 
 #txtalgn{
@@ -17,23 +18,23 @@ label{
 }
 
 #txtalgn1{
-	margin: .3em 
+	margin: .3em
 }
 
 .in{
 	height: 30px ;
 }
 
-#centralbox{
+.centralbox{
 	align: center;
-	margin-top: 70px;
-	margin-left: 40px;
+	margin-top: 10%;
+	margin-left: 10%;
 }
 
 
 input[name="init"] {
-    padding:10px 25px; 
-    background:#7eb9dc; 
+    padding:10px 25px;
+    background:#7eb9dc;
     border:0 none;
     cursor:pointer;
     -webkit-border-radius: 5px;
@@ -41,37 +42,37 @@ input[name="init"] {
     position: absolute;
 	top: 50%;
 	left: 50%;
-	margin-top: 150px;
-	margin-left: 32px;
+	margin-top: 23%;
+	margin-left: 8%;
 	width: 120px;
 }
 
 input[name="create"] {
-    padding:10px 25px; 
-    background:#b4133f; 
+    padding:10px 25px;
+    background:#9b9b9b;
     border:0 none;
     cursor:pointer;
     -webkit-border-radius: 5px;
     border-radius: 7px;
     position: absolute;
-	top: 45%;
-	left: 45%;
-	margin-top: 100px;
-	margin-left: -175px;
-	width: 120px; 
+	top: 50%;
+	left: 50%;
+	margin-top: 23%;
+	margin-left: -40%;
+	width: 120px;
 
 }
 
 input[type=email] {
-    padding:5px; 
-    border:2px solid #7eb9dc; 
+    padding:5px;
+    border:2px solid #7eb9dc;
     -webkit-border-radius: 5px;
     border-radius: 7px;
 }
 
 input[type=password] {
-    padding:5px; 
-    border:2px solid #7eb9dc; 
+    padding:5px;
+    border:2px solid #7eb9dc;
     -webkit-border-radius: 5px;
     border-radius: 7px;
 }
@@ -81,7 +82,7 @@ input[type=text]:focus {
 }
 
 #container{
-	background-color: white;
+	background-color: rgba(228, 169, 46, 0.72);
 	border-radius: 20%;
 	width: 400px;
 	height: 300px;
@@ -91,5 +92,3 @@ input[type=text]:focus {
 	margin-top: -100px;
 	margin-left: -125px;
 }
-
-
