--- a/apache-tomcat-8.0.47/webapps/proyecto/init.css
+++ b/apache-tomcat-8.0.47/webapps/proyecto/init.css
@@ -11,6 +11,7 @@ body{
 label{
 	font-size: 25px;
 	color :#2b3737
+
 }
 
 #txtalgn{
@@ -18,17 +19,21 @@ label{
 }
 
 #txtalgn1{
-	margin: .3em
+	margin: .3em 47px;
+}
+.cntr{
+		margin: .3em 47px;
 }
 
 .in{
 	height: 30px ;
+	margin: 10px;
 }
 
 .centralbox{
 	align: center;
 	margin-top: 10%;
-	margin-left: 10%;
+	margin-left: 20%;
 }
 
 
@@ -40,11 +45,11 @@ input[name="init"] {
     -webkit-border-radius: 5px;
     border-radius: 7px;
     position: absolute;
-	top: 50%;
-	left: 50%;
-	margin-top: 23%;
-	margin-left: 8%;
-	width: 120px;
+		top: 50%;
+		left: 50%;
+		margin-top: 30%;
+		margin-left: 8%;
+		width: 120px;
 }
 
 input[name="create"] {
@@ -55,11 +60,11 @@ input[name="create"] {
     -webkit-border-radius: 5px;
     border-radius: 7px;
     position: absolute;
-	top: 50%;
-	left: 50%;
-	margin-top: 23%;
-	margin-left: -40%;
-	width: 120px;
+		top: 50%;
+		left: 50%;
+		margin-top: 30%;
+		margin-left: -40%;
+		width: 120px;
 
 }
 
@@ -68,6 +73,7 @@ input[type=email] {
     border:2px solid #7eb9dc;
     -webkit-border-radius: 5px;
     border-radius: 7px;
+		margin-left: 50%;
 }
 
 input[type=password] {
@@ -85,10 +91,19 @@ input[type=text]:focus {
 	background-color: rgba(228, 169, 46, 0.72);
 	border-radius: 20%;
 	width: 400px;
-	height: 300px;
+	height: 400px;
 	position: absolute;
-	top: 45%;
+	top: 40%;
 	left: 45%;
 	margin-top: -100px;
 	margin-left: -125px;
+}
+
+.g-recaptcha{
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	margin-top: 7%;
+	margin-left: -37%;
+	width: 120px;
 }
